<resources>
    <string name="app_name">لبّاني للذبائح واللحوم الطازجة</string>
    <string name="no_have_account_sign_up">لا تمتلك حساب ؟
        <font fgcolor="#F9AE3A">قم بإنشاء حساب</font></string>
    <string name="agree_constraints">من خلال النقر على إنشاء حساب فإنك توافق على
        <font fgcolor="#F9AE3A">الشروط والأحكام</font></string>
    <string name="resent"><u>أعد إرسال الرمز</u></string>
    <string name="coupon_exchange">صرف قسيمة</string>
    <string name="change_password">تغيير كلمة السر</string>
    <string name="city">المدينة</string>
    <string name="address">العنوان</string>
    <string name="payment_methods">طرق الدفع المسجلة</string>
    <string name="constraints">الشروط والاحكام</string>
    <string name="call_info">اتصل بنا</string>
    <string name="rate_us">تقيمك يهمنا</string>
    <string name="upload_problem">رفع شكوى</string>
    <string name="logout">تسجيل خروج</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_satisfied">غير راضي</string>
    <string name="satisfied">راضي</string>
    <string name="client_info">بيانات العميل</string>
    <string name="card_date">تاريخ البطاقة</string>
    <string name="send">إرسال</string>
    <string name="add_to_basket">اضف الى السلة</string>
    <string name="chopping">التقطيع</string>
    <string name="size">الحجم</string>
    <string name="count">العدد</string>
    <string name="price">السعر</string>
    <string name="encapsulation">التغليف</string>
    <string name="total">المجموع</string>
    <string name="home">الرئيسية</string>
    <string name="notifications">الاشعارات</string>
    <string name="wallet">محفظتك</string>
    <string name="my_profile">حسابي</string>
    <string name="internet_connection">تأكد من اتصالك باﻹنترنت</string>
    <string name="sorry">عفواً</string>
    <string name="should_login">يرجى تسجيل دخول للاستكمال في التطبيق</string>
    <string name="register">تسجيل</string>
    <string name="cancel">إلغاء</string>
    <string name="select_location">قم بإختيار موقعك</string>
    <string name="shoid_be_select_location">يرجى اختيار الموقع الذي سوف تستلم منة الطلب</string>
    <string name="create_account">إنشاء حساب</string>
    <string name="select">اختر</string>
    <string name="rate_app">قيم التطبيق</string>
    <string name="tell_us">إن ارضيناك تحدث عنا و ان لم نرضيك تحدث الينا</string>
    <string name="rate">قيّم</string>
    <string name="country">الدولة</string>
    <string name="delivery_location">موقع التسليم</string>
    <string name="neighborhood_name">اسم الحي</string>
    <string name="recivered_name">اسم المستلم</string>
    <string name="receiver_phone">رقم رقم الجوال (إجباري)  <font fgcolor="#F44336">*</font></string>
    <string name="save_address">احفظ العنوان</string>
    <string name="push">دفع</string>
    <string name="visa_owner_name">اسم صاحب البطاقة</string>
    <string name="card_no">رقم البطاقة</string>
    <string name="enter_phone_to_create_new_password">يرجى إدخال رقم الهاتف الخاص بك. سوف تتلقى كود لإنشاء كلمة مرور جديدة عبر بريد الرسائل</string>
    <string name="continuation">استمرار</string>
    <string name="account_verification">التحقق من الحساب</string>
    <string name="registered_payment_methods">طرق الدفع المسجلة</string>
    <string name="enter_phone">ادخل رقم الجوال</string>
    <string name="minced_meat">لحم مفروم</string>
    <string name="note_here">اكتب ملاحظاتك هنا</string>
    <string name="notes">ملاحظاتك</string>
    <string name="okay">حسنــا</string>
    <string name="x_api_key_error">ليس لديك صلاحية الوصول لهذه الخدمة</string>
    <string name="auth_error">انتهت جلسة السماح لك علي هذا التطبيق \n سجل دخولك مرة اخري </string>
    <string name="known_error">خطأ غير معروف سنحاول اصلاح في أقرب وقت ممكن</string>
    <string name="error_phone">رقم الجوال غير مسجل لدينا</string>
    <string name="error_email">البريد الإلكتروني غير مسجل لدينا</string>
    <string name="error_password">كلمة السر خاطئة</string>
    <string name="email_exist">البريد الالكتروني مسجل لدينا</string>
    <string name="phone_exist">رقم الجوال مسجل لدينا</string>
    <string name="default_notification_channel_id">لباني</string>
    <string name="password_should_be_g_then_8">يجب ان يكون 8 ارقام علي الأقل</string>
    <string name="not_email">يجب أن يكون ايميلا</string>
    <string name="password_not_matcher">كلمتا المرور يجب أن تكون متطابقة</string>
    <string name="image_per">يجب عليك السماح للوصول الي الوسائط أولا</string>
    <string name="notifications_per">يجب عليك السماح لعرض الإشعارات أولا</string>
    <string name="phone_validate">يجب ان سكون 10 ارقام ويبدأ ب 0</string>
    <string name="otp_error">الرمز المدخل غير صحيح</string>
    <string name="reset_password">إعادة تعيين كلمة السر</string>
    <string name="succ_reset_password">تم تعيين كلمة السر بنجاح</string>
    <string name="edit">تعديل</string>
    <string name="logout_txt">هل تريد حقا تسجيل الخروج من التطبيق حقا؟</string>
    <string name="logout_succ">تم تسجيل خروجك بنجاح</string>
    <string name="should_selecet_city">يجب اختيار المدينة اولا</string>
    <string name="city_updated">تم تحديث المدينة بنجاح</string>
    <string name="basket">السلة</string>
    <string name="sar">ريال</string>
    <string name="no_products_in_this_city">لا متوجد منتجات متوفر في هذه المدينة</string>
    <string name="cash">كـاش</string>
    <string name="no_carts">لا توجدلديك منتجات في السلة يمكنك إضافتها أولا</string>
    <string name="no_valid_date">يجب ان يكون التاريخ بصيغة yyyy-MM</string>
    <string name="visa_password">كلمة المرور 3 ارقام فقط</string>
    <string name="visa_nu_error">رقم البطاقة يجب أن يكون 16 رقم</string>
    <string name="add">إضافة</string>
    <string name="no_visas">لايوجد ليك  فيزا مسجلة لدينة</string>
    <string name="card_removed">تم حذف البطاقة بنجاح</string>
    <string name="empty_notifications">ليس لديك إشعارات</string>
    <string name="empty_orders">ليس لديك طلبات</string>
    <string name="empty_addresses">ليس لديك عناوين مسجلة</string>
    <string name="empty_times">لايوجد مواعيد توصيل متاحة الآن</string>
    <string name="empty_wallet">ليس لديك معاملات مسجلة</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="should_select_problem_type">يجب عليك اختيار نوع المشكلة أولا</string>
    <string name="complaint_sent_succ">تم إرسال مشكلتك بنجاح</string>
    <string name="empty_complaints">ليس لديك شكاوي</string>
    <string name="complaint_num">رقم الشكوي</string>
    <string name="maps_api_key" translatable="false">AIzaSyC6yMDgDQXesCGg6UqxByre6XbEicxMV20</string>
    <string name="select_location_first">اختر موقعك اولا</string>
    <string name="location_per">يجب علك السماح للتطبيق للوصول الي موقعك</string>
    <string name="open_gps">ينبغي عليك فتح ال GPS لتحديد موقعك</string>
    <string name="address_added">تم إضافة عنوانك بنجاح</string>
    <string name="address_updated">تم تحديث عنوانك بنجاح</string>
    <string name="add_address">اضف عنوان</string>
    <string name="address_removed_succ">تم حذف العنوان بنجاح</string>
    <string name="ksa">المملكة العربية السعودية</string>
    <string name="delivery_to">التوصيل الى</string>
    <string name="coupon_code">كود القسيمة</string>
    <string name="enter_coupon_code">ادخل كود القسيمة</string>
    <string name="not_found_coupon">هذا الكوبون غير موجود</string>
    <string name="no_city_coupon">هذا الكوبون غير مطبق في مدينتك</string>
    <string name="max_coupon">وصلت للحد الأقصى من الكوبونات</string>
    <string name="not_wallet_coupon">لا يمكن تطبيق قسيمة المحفظة</string>
    <string name="expired_coupon">هذا الكوبون منهي الصلاحية</string>
    <string name="success_coupon">تم إضافة الكوبون بنجاح</string>
    <string name="order_coupon">كوبون / كود خصم</string>
    <string name="add_2">اضف</string>
    <string name="can_not_rating">لا يمكنك التقييم الآن</string>
    <string name="rate_msg">شكرا لمساعتدكم في تحسين الخدمة</string>
    <string name="delete">حذف</string>
    <string name="delete_cart_item_msg">هل تريد حذف هذا العنصر ؟</string>
    <string name="cart_item_removed_succ">تم حذف عنصر بنجاح</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_app_id">633122030999543</string>
    <string name="fb_login_protocol_scheme">fb633122030999543</string>
    <string name="count_should_be_g_0">العدد يجب أن  يكون أكبر من 0</string>
    <string name="empty_basket">السلة فارغة اضف إليها عناصر أولا</string>
    <string name="my_orders">طلباتي</string>
    <string name="state">الحالة :</string>
    <string name="ranking">الترتيب</string>
    <string name="product">المنتج</string>
    <string name="volume">الحجم</string>
    <string name="quantity">الكمية</string>
    <string name="delivery_price">سعر التوصيل</string>
    <string name="tax_price">سعر الضريبة</string>
    <string name="discount_price">سعر الخصم</string>
    <string name="total_price">السعر الاجمالي</string>
    <string name="order_details">تفاصيل الطلب</string>
    <string name="order_number">رقم الطلب</string>
    <string name="payment_when_receiving">عند الاستلام</string>
    <string name="cancel_success">تم حذف الطلب بنجاح</string>
    <string name="cancel_failure">لا يمكنك حذف الطلب</string>
    <string name="make_order_succ">تم إضافة طلبك بنجاح</string>
    <string name="wallet_amount">رصيد المحفظة</string>
    <string name="payment_with_visa">الدفع بإستخدام الفيزا</string>
    <string name="sar_2">ر.س</string>
    <string name="delivery_address_first">اضف مكان التوصيل أولا</string>
    <string name="wallet_first">اضف الكمية المسحوبة من المحفظة أولا</string>
    <string name="enter_wallet_first">الكمية المسحوبة من المحفظة أكبر من الكمية الموجودة بها</string>
    <string name="delivery_date_first">اضف تاريخ التوصيل أولا</string>
    <string name="delivery_time_first">اضف وقت التوصيل أولا</string>
    <string name="total_cost">التكلفة الاجمالية</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="click_to_time">اضغط هنا لإختيار الوقت</string>
    <string name="click_to_date">اضغط هنا لإختيار التاريخ</string>
    <string name="select_order_time">اختر وقت التوصيل المناسب</string>
    <string name="select_order_day">اختر يوم التوصيل المناسب</string>
    <string name="from">من</string>
    <string name="to">إلي</string>
    <string name="wallet_1">محفظة نقود</string>
    <string name="copy_coupon">نسخ الكود</string>
    <string name="visa_founded_error">البطاقة موجودة مسبقا</string>
    <string name="visa_type_error">خطأ في نوع الفيزا المدخلة</string>
    <string name="checkout_ui_callback_scheme">com.labbany.labbany</string>
    <string name="payment_button_callback_scheme">com.labbany.labbany</string>
    <string name="custom_ui_callback_scheme">com.labbany.labbany</string>
    <string name="checkout_ui_title">Ready-to-Use UI</string>
    <string name="payment_button_title">Payment Button</string>
    <string name="custom_ui_title">SDK &amp; Your Own UI</string>
    <string name="checkout_immediately_with">Checkout immediately with</string>
    <string name="sdk_version_number">mobile sdk v%s</string>
    <string name="visa">VISA</string>
    <string name="card_holder_hint">Card Holder</string>
    <string name="card_number_hint">Card Number</string>
    <string name="card_expiry_month_hint">MM</string>
    <string name="card_expiry_year_hint">YY</string>
    <string name="card_cvv_hint">CVV</string>
    <string name="date_delimiter">/</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_proceed_to_checkout">PROCEED TO CHECKOUT</string>
    <string name="button_pay_now">PAY NOW</string>
    <string name="message_successful_payment">The payment was successful</string>
    <string name="message_unsuccessful_payment">"The payment was unsuccessful"</string>
    <string name="message_payment_confirmation">Payment of %1$s %2$s will be executed</string>
    <string name="error_message">An error occurred</string>
</resources>