<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/home_page"
        android:enabled="true"
        android:checked="true"
        android:icon="@drawable/bnv_home"
        android:title="@string/home"/>

    <item
        android:id="@+id/notifications_page"
        android:enabled="true"
        android:icon="@drawable/bnv_notifications"
        android:title="@string/notifications"/>

    <item
        android:id="@+id/wallet_page"
        android:enabled="true"
        android:icon="@drawable/bnv_wallet"
        android:title="@string/wallet"/>

    <item
        android:id="@+id/user_page"
        android:enabled="true"
        android:icon="@drawable/bnv_profile"
        android:title="@string/my_profile"/>

</menu>