<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_22sdp"
        android:layoutDirection="rtl"
        android:background="@drawable/bg_half_circle_yellow_4_corner_7sdp"
        android:paddingVertical="@dimen/_2sdp">


        <TextView
            android:id="@+id/tv_position"
            style="@style/CustomTextViewTheme_Medium"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/ranking"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_product_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/tv_product_name"
            style="@style/CustomTextViewTheme_Medium"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/product"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_product_volume"
            app:layout_constraintStart_toEndOf="@id/tv_position"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_product_volume"
            style="@style/CustomTextViewTheme_Medium"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/volume"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_product_count"
            app:layout_constraintStart_toEndOf="@id/tv_product_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_product_count"
            style="@style/CustomTextViewTheme_Medium"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/quantity"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_product_price"
            app:layout_constraintStart_toEndOf="@id/tv_product_volume"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_product_price"
            style="@style/CustomTextViewTheme_Medium"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_product_count"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlCompat" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>