<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="@dimen/_245sdp"
        android:background="@drawable/bg_solid_white_corner_22sdp"
        android:layout_height="@dimen/_150sdp">

        <View
            android:layout_width="@dimen/_245sdp"
            android:layout_height="@dimen/_150sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />


        <TextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_app"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:layout_marginTop="@dimen/_24sdp"
            style="@style/CustomTextViewTheme_Bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tell_us"
            android:layout_marginTop="@dimen/_3sdp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:textSize="@dimen/_11ssp"
            style="@style/CustomTextViewTheme_Regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_1" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="3"
            android:theme="@style/RatingBar"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_marginTop="@dimen/_12sdp"
            android:id="@+id/rating_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_2" />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="vertical"
            android:id="@+id/gl_1"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rating_bar"
            android:background="@color/gray_5"
            android:id="@+id/view_1"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="@id/gl_1"
            app:layout_constraintEnd_toEndOf="@id/gl_1"
            app:layout_constraintTop_toTopOf="@id/tv_rate"
            app:layout_constraintBottom_toBottomOf="@id/tv_rate"
            android:layout_marginVertical="@dimen/_3sdp"
            android:background="@color/gray_5"
            android:id="@+id/view_2"
            />

        <TextView
            android:id="@+id/tv_rate"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_solid_white_corner_br_22sdp"
            android:text="@string/rate"
            android:textColor="@color/dull_red"
            android:textSize="@dimen/_12ssp"
            style="@style/CustomTextViewTheme_Bold"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/gl_1"
            app:layout_constraintTop_toBottomOf="@id/view_1" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/cancel"
            android:textColor="@color/gray_6"
            android:gravity="center"
            android:background="@drawable/bg_solid_white_corner_bl_22sdp"
            app:layout_constraintBottom_toBottomOf="@id/tv_rate"
            android:textSize="@dimen/_12ssp"
            style="@style/CustomTextViewTheme_Bold"
            app:layout_constraintEnd_toEndOf="@id/gl_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_rate"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>